<resources>
    <string name="app_name">AMazeByDavidMontenegro</string>
    <string name="title">Welcome to the maze!</string>
    <string name="tSize">Choose a maze size:</string>
    <string name="size">Size: %1$d</string>
    <string name="tRooms">Choose to have rooms or not:</string>
    <string name="tAlgorithm">Choose a maze generation algorithm:</string>
    <string name="tMode">Choose a playing mode:</string>
    <string name="inputDetected">Input detected!</string>
    <string name="roomsYes">YES</string>
    <string name="roomsNo">NO</string>
    <string name="DFS">DFS</string>
    <string name="Prim">Prim</string>
    <string name="Kruskal">Kruskal</string>
    <string name="Manual">Manual</string>
    <string name="WallFollower">Wall Follower</string>
    <string name="Wizard">Wizard</string>
    <string name="revisit">Revisit</string>
    <string name="explore">Explore</string>
    <string name="genProgress">Maze generation progress:</string>
    <string name="percent">%1$d%%</string>
    <string name="wholeMaze">Whole Maze From Top</string>
    <string name="solution">Solution in the Maze</string>
    <string name="visible">Currently Visible Walls</string>
    <string name="mazeManual">Manual</string>
    <string name="mazeAnimation">Animation</string>
    <string name="shortcut">Shortcut</string>
    <string name="up">Up</string>
    <string name="jump">Jump</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="back">Back</string>
    <string name="energy">Remaining energy:</string>
    <string name="start">Start</string>
    <string name="stop">Start</string>
    <string name="tPath">Length of path:</string>
    <string name="tEnergy">Overall energy consumption:</string>
    <string name="victory">VICTORY!</string>
    <string name="failure">FAILURE!</string>
    <string name="finPath">%1$d</string>
    <string name="finEnergy">%1$f</string>
    <string name="maze">Maze delivered!</string>


</resources>