<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.PlayManuallyActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ToggleButton
            android:id="@+id/wholeMazeMan"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:checked="false"
            android:background="@color/red"
            android:textOff="@string/wholeMaze"
            android:textOn="@string/wholeMaze"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ToggleButton
            android:id="@+id/solutionMan"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:background="@color/red"
            android:textOff="@string/solution"
            android:textOn="@string/solution"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ToggleButton
            android:id="@+id/visibleWallsMan"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:checked="false"
            android:background="@color/red"
            android:textOff="@string/visible"
            android:textOn="@string/visible"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

    <Button
        android:id="@+id/shortcutMan"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:background="@color/red"
        android:text="@string/shortcut"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/up"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:background="@color/red"
        android:text="@string/up"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shortcutMan" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/up"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/left"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@color/red"
            android:text="@string/left"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/jump"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/jump"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/right"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/red"
            android:text="@string/right"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

    <Button
        android:id="@+id/down"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@color/red"
        android:text="@string/down"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/up" />


</androidx.constraintlayout.widget.ConstraintLayout>