<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.PlayAnimationActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/wholeMaze"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@color/red"
            android:text="@string/wholeMaze"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/solution"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/solution"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/visibleWalls"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/red"
            android:text="@string/visible"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

    <Button
        android:id="@+id/shortcut"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:background="@color/red"
        android:text="@string/shortcut"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/energy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:padding="18dp"
        android:text="@string/energy"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shortcut" />

    <ProgressBar
        android:id="@+id/energyProgress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/energy" />

    <Button
        android:id="@+id/start"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@color/red"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/energyProgress" />

</androidx.constraintlayout.widget.ConstraintLayout>